# crafting-interpreters

./: .gitignore  LICENSE  README.md  jest.config.ts  package.json  pnpm-lock.yaml
byte-code-vm/: CMakeLists.txt  README.md
byte-code-vm/src/: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  memory.c  memory.h  scanner.c  scanner.h  string.c  string.h  value.c  value.h  vm.c  vm.h
byte-code-vm/tests/: CMakeLists.txt  chunk_test.c  compiler_test.c  debug_test.c  scanner_test.c  string_test.c  tests.c  tests.h  value_test.c  vm_test.c
src/: ast-printer.spec.ts  ast-printer.ts  callable-class.ts  callable-function.ts  callable.ts  class-instance.ts  common.ts  environment.spec.ts  environment.ts  interpreter.spec.ts  interpreter.ts  jlox.ts  lox-resolver.spec.ts  lox.spec.ts  lox.ts  parser.spec.ts  parser.ts  resolver.ts  scanner.ts  tlox.ts
src/ast/: assign.ts  base.ts  binary.ts  block.ts  call.ts  class.ts  continue.ts  expression.ts  function.ts  get.ts  grouping.ts  index.ts  lambda.ts  literal.ts  logical.ts  print.ts  return.ts  set.ts  this.ts  unary.ts  var.ts  variable.ts
treewalker-interpreter/: .gitignore  .prettierignore  eslint.config.mjs  package.json  tsconfig.json
treewalker-interpreter/src/: callable-function.ts  class-instance.ts  environment.spec.ts  errors.ts  interpreter.ts  parser.spec.ts  parser.ts  resolver.ts  scanner.spec.ts  scanner.ts
treewalker-interpreter/src/ast/: assign.ts  binary.ts  break.ts  class.ts  expression.ts  if.ts  super.ts  unary.ts  var.ts  variable.ts  while.ts
